# RAG-Advanced-Pipeline

./: .env  .gitignore  basicrag.ipynb  debug_citations.py  docker_compose.yml  document_loader.py  llama.py  main.py  observability.py  pyproject.toml  rag_pipeline.py  test.py  test2.py  test3.py  test_delete.py  test_embed.py  test_observability.py  test_pipeline.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
api/: dependencies.py  main.py  schemas.py
api/routers/: ingest.py  query.py
debug_scripts/: debug.py  debug_01.py  debug_02.py  debug_image_download.py  debug_llamaparse.py  enriched_figures_2508.11287v1.json  full_pipeline_chunks_2508.11287v1.json  hugging_download.py  test.py  test2.py  test3.py  test_chunk.py  test_embed.py  test_evaluation.py  test_ollama.py  test_qwen.py  test_rag_pipeline.py
evaluation/: evaluator.py  metrics.py
evaluation/deep_eval/: dataset.py  metrics.py  rag_app.py  runner.py  test_dataset.json
evaluation/legacy/: metrics.py  retrieval_evaluator.py  runner.py  test_case_loader.py
evaluation/reports/: deepeval_report_20260630_203034.json  deepeval_report_20260630_224539.json  evaluation_20260630_131045.json
generation/: grounded_generator.py
ingestion/: cache_manager.py  document_loader.py  figure_enricher.py  image_visualizer.py  ingestion_pipeline.py  schema_normalizer.py  table_semantic_enricher.py
logs/: rag_pipeline.jsonl
models/: document_element.py
pipeline/: rag_pipeline.py
retrieval/: filter_builder.py  query_engine.py  query_rewriter.py
(+24 files in other folders)
