[project]
name = "rag01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.105.0",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "llama-index>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "llama-parse>=0.6.94",
    "logging>=0.4.9.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "unstructured>=0.23.1",
]
