[project]
name = "rag01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepeval>=4.0.7",
    "docling>=2.105.0",
    "fastapi>=0.138.1",
    "flagembedding>=1.4.0",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "llama-index>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "llama-parse>=0.6.94",
    "logging>=0.4.9.6",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.2",
    "path>=17.1.1",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
